fix the 'cut off `g` on the welcome screen' thing

--- a/freemocap/gui/qt/style_sheet/qt_style_sheet.scss
+++ b/freemocap/gui/qt/style_sheet/qt_style_sheet.scss
@@ -158,6 +158,7 @@ WelcomeScreenButton {
     font-size: 24px;
     border-radius: 20px;
     padding: 10px;
+    min-height: auto;
 }
 
 WelcomeScreenButton:hover {
